[package]
name = "swissgrid_chart_transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
thiserror = "1.0.30"
min-max = "0.1.8"
rayon = "1.5.1"
assert_approx_eq = "1.1.0"
clap = { version = "3.1.8", features = ["derive"] }
simple-error = "0.2.3"
